--- a/public/css/flowerCatlog.css
+++ b/public/css/flowerCatlog.css
@@ -14,7 +14,6 @@ body {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-around;
 }
 
 .sub-header {
@@ -23,6 +22,14 @@ body {
   border-bottom: 1px solid black;
 }
 
+.navigation {
+  padding-left: 30px;
+}
+
 img {
   padding: 5px;
+}
+
+.animated-image {
+  text-align: right;
 }
