--- a/templates/guestBook.html
+++ b/templates/guestBook.html
@@ -6,14 +6,14 @@
 
 <body>
   <h1 style="text-align: center;color:orange;"> <a href="./flowerCatlog.html">
-      <<</a> Guest Book</h1>
+      <<</a> Guest Book <a href="/logout" style="font-size: 18px;">Logout</a></h1>
 
   <h3>Leave comment</h3>
 
   <form action="add-comment" method="POST">
     <div>
       <label for="name">Name : </label>
-      <input type="text" name="name" id="name">
+      <input type="text" name="name" id="name" value="--name--">
     </div>
     <br>
     <div>
