--- a/templates/guestBook.html
+++ b/templates/guestBook.html
@@ -2,6 +2,7 @@
 
 <head>
   <title>flowerCatalog</title>
+  <script src="js/guestBook.js"></script>
 </head>
 
 <body>
@@ -21,7 +22,7 @@
       <textarea name="comment" id="comment" cols="30" rows="10"></textarea>
     </div>
     <br>
-    <input type="submit" value="submit">
+    <button id="submit" type="button">Submit</button>
   </form>
   <div style="border-top: 1px solid black;">
     --comments--
