--- a/templates/guestBook.html
+++ b/templates/guestBook.html
@@ -2,7 +2,7 @@
 
 <head>
   <title>flowerCatalog</title>
-  <script src="js/guestBook.js"></script>
+  <script src="scripts/guestBook.js"></script>
 </head>
 
 <body>
@@ -14,7 +14,7 @@
   <form action="add-comment" method="POST">
     <div>
       <label for="name">Name : </label>
-      <input type="text" name="name" id="name" value="--name--">
+      <input type="text" name="name" id="name" value="--name--" readonly="readonly">
     </div>
     <br>
     <div>
@@ -24,7 +24,7 @@
     <br>
     <button id="submit" type="button">Submit</button>
   </form>
-  <div style="border-top: 1px solid black;">
+  <div style="border-top: 1px solid black;" id="comments">
     --comments--
   </div>
 </body>
