--- a/templates/guestBook.html
+++ b/templates/guestBook.html
@@ -14,7 +14,7 @@
   <form action="add-comment" method="POST">
     <div>
       <label for="name">Name : </label>
-      <input type="text" name="name" id="name" value="--name--" readonly="readonly">
+      <input type="text" name="name" id="name">
     </div>
     <br>
     <div>
