Removed unused handlers

--- a/templates/guestBook.html
+++ b/templates/guestBook.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-  <h1 style="text-align: center;color:orange;"> <a href="./flowerCatlog.html">
+  <h1 style="text-align: center;color:orange;"> <a href="./index.html">
       <<</a> Guest Book <a href="/logout" style="font-size: 18px;">Logout</a></h1>
 
   <h3>Leave comment</h3>
